[package]
name = "node_version"
version = "0.1.5"
edition = "2021"

[profile.release]
opt-level = "z"

[profile.dev]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version = "3.2.25"}
ansi_term={version = "0.12.0"}
ctrlc={version = "3.4.0"}